child, sibling works. however there is no order to it

--- a/virtualDom/index.html
+++ b/virtualDom/index.html
@@ -9,5 +9,10 @@
   <body>
     <div id="root"></div>
   </body>
+  <style>
+    body {
+      background-color: black;
+    }
+  </style>
   <script src="./main.js"></script>
 </html>
